<resources>
    <string name="app_name">爱广科</string>
    <string name="util">实用功能</string>
    <string name="account">学号</string>
    <string name="password">密码</string>
    <string name="no_login">未登录</string>
    <string name="login">登录</string>
    <string name="logining">正在登录</string>
    <string name="login_fail">登录失败</string>
    <string name="login_success">登录成功</string>
    <string name="score_list">成绩单</string>
    <string name="data_about">数据仅供参考</string>
    <string name="loading">正在加载</string>
    <string name="empty">获取到的数据为空</string>
    <string name="retry">重新加载</string>
    <string name="balance">余额:</string>
    <string name="yuan">元</string>
    <string name="bill">账单详情</string>
    <string name="zero">00.00</string>
    <string name="news_detail">新闻详情</string>
    <string name="description">一款漂亮的开源的精简的第三方智慧广科APP</string>
    <string name="contact_group">联系我们</string>
    <string name="name">姓名</string>
    <string name="className">班级名称</string>
    <string name="FirstYear">入学年份</string>
    <string name="disciplineName">专业名称</string>
    <string name="collegeName">学院名称</string>
    <string name="loginOut">退出账号</string>
    <string name="head">头像</string>
    <string name="nickName">昵称</string>
    <string name="studentID">学号</string>
</resources>
