<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <include
        android:id="@+id/header"
        layout="@layout/layout_header" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        android:src="@drawable/head_img1" />

    <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
        android:id="@+id/account_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:iconSignifier="@drawable/ic_account"
        app:labelText="@string/account"
        app:panelBackgroundColor="@android:color/white">

        <studio.carbonylgroup.textfieldboxes.ExtendedEditText
            android:id="@+id/account_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

    <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
        android:id="@+id/password_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:iconSignifier="@drawable/ic_passwd"
        app:labelText="@string/password"
        app:panelBackgroundColor="@android:color/white">

        <studio.carbonylgroup.textfieldboxes.ExtendedEditText
            android:id="@+id/password_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

    <com.flod.loadingbutton.LoadingButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/selector_btn"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:endCompleteDrawable="@drawable/ic_done"
        app:endFailDrawable="@drawable/ic_error" />

</LinearLayout>